--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
 PORT=4000
 
+DATABASE_URL=postgresql://user:password@localhost:5432/home_library
+NODE_ENV=development
+
 CRYPT_SALT=10
 JWT_SECRET_KEY=secret123123
 JWT_SECRET_REFRESH_KEY=secret123123
