--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 PORT=4000
 
-DATABASE_URL=postgresql://user:password@localhost:5432/home_library
+DATABASE_URL=postgresql://postgres:postgres@localhost:5432/home_library
 NODE_ENV=production
 
 CRYPT_SALT=10
@@ -9,4 +9,4 @@ JWT_SECRET_REFRESH_KEY=secret123123
 TOKEN_EXPIRE_TIME=1h
 TOKEN_REFRESH_EXPIRE_TIME=24h
 
-DOCKER_USERNAME=docker-hub-username
+DOCKER_USERNAME=ikoroleva01
